--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "minify": "html-minifier-terser -c minifier.config.json --input-dir ./reports --output-dir ./reports",
-    "tailwind": "tailwindcss -i input.css -o style.css --minify"
+    "tailwind": "tailwindcss -i input.css -o style.css --minify",
+    "format": "python3 format.py"
   },
   "keywords": [],
   "author": "",
